--- a/.gitignore
+++ b/.gitignore
@@ -88,6 +88,7 @@ local.properties
 *.zip
 *.tar.gz
 *.rar
+!junit-console.jar
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
