--- a/.gitignore
+++ b/.gitignore
@@ -58,7 +58,7 @@ local.properties
 .apt_generated_test/
 
 # Scala IDE specific (Scala & Java development for Eclipse)
-.cache-main
+.cache-livrable2
 .scala_dependencies
 .worksheet
 
